Business' Address & Padding fixes (#4)
Adding Khayaal's work address to the website along with changes to the contact information.
Padding issues for the following were addressed:

The home page and logo sections for tablet devices overlapped.
Footer document links on mobile devices were obstructed by the phone's bottom nav gesture buttons.
DonateBox is slightly skewed to the left when wrapped below the DonateDescription component.
Align the footer social media logos.

--- a/src/Components/Donate/Donate.css
+++ b/src/Components/Donate/Donate.css
@@ -5,7 +5,8 @@
     justify-content: center;
     min-height: 65vh;
     max-width: 100vw;
-    gap: 2em;
+    gap: 1rem;
+    padding:0 6%;
 }
 
 @media screen and (min-width: 768px) {
@@ -33,51 +34,22 @@
         align-items: center;
         padding-top: 20vw;
     }
-}
+}   
 
 .donate-text-container {
-    display: flex;
-    flex-basis: 55%;
-    align-items: center;
-    flex-direction: column;
-    flex-grow: 1;
-}
-
-.donate-text {
     font-family: 'Roboto';
     font-style: normal;
     display: flex;
+    align-items: center;
+    flex-direction: column;
+    flex: 1.5;
     font-weight: 700;
     align-items: center;
     color: var(--info-text-color);
-    padding-left: 10%;
-    padding-right: 10%;
-}
-
-.donate-text-container > h1 {
-    color: var(--primary-text-color);
-    font-family: Roboto;
-    font-weight: 900;
-    font-size: 4vw;
-    padding: 0 10%;
-}
-
-@media (max-width: 673px) {
-    .donate-text-container > h1 {
-        font-size: 1.5rem;
-        font-weight: 900;
-    }
-}
-
-.donate-description {
-    font-size: 0.9rem;
-    line-height: 1.3rem;
-    word-spacing: 0.3vw;
 }
 
 .donate-box-container {
     display: flex;
-    flex-basis: 30%;
     align-items: center;
     flex-direction: column;
     justify-content: flex-start;
@@ -85,7 +57,30 @@
     font-style: normal;
     font-weight: 700;
     border-radius: 12px;
-    padding-right: 5%;
+    flex: 1;
+}
+
+.donate-text-container > h1 {
+    color: var(--primary-text-color);
+    font-family: Roboto;
+    font-weight: 900;
+    font-size: 4vw;
+    /* padding-left: 10%; */
+    /* padding-right: 5%; */
+}
+
+@media (max-width: 673px) {
+    .donate-text-container > h1 {
+        font-size: 1.5rem;
+        font-weight: 900;
+        padding-left: 0;
+    }
+}
+
+.donate-description {
+    font-size: 0.9rem;
+    line-height: 1.3rem;
+    word-spacing: 0.3vw;
 }
 
 .donate-box {
